# gpusnarks

./: .gitignore  CMakeLists.txt  LICENSE  README.md  circle.yml  fft_host.h  fft_kernel.cu  fft_kernel.h  main.cpp
cuda/: CMakeLists.txt  device_field.h  device_field_operator_test.cpp  device_field_operators.h  fft_kernel.cu  fft_kernel.h  field.cu  field.h  multi_exp.cu  multi_exp.h  test.sh
fields/: CMakeLists.txt  dummy_field.cpp  dummy_field.h  field.cpp  field.h
test/: CMakeLists.txt  fft_host.h  main.cpp  multiexp.h
